--- a/src/Styles.css
+++ b/src/Styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Oxygen&display=swap');
 .navbar-brand {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
@@ -254,7 +254,7 @@ img, svg {
 background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg stroke='%23434343' stroke-width='0' %3E%3Crect fill='%232E2EEC' x='-60' y='-60' width='110' height='240'/%3E%3C/g%3E%3C/svg%3E");
 }
 .rce-mbox-text {
-  font-family: 'Signika', sans-serif;
+  font-family: 'Oxygen', sans-serif;
   font-weight:600;
 }
 /* Body Right message */
